# hydra_vortex

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .opencodeignore  .pre-commit-config.yaml  AGENTS.md  AGENT_TOOLS_GUIDE.md  CHANGELOG.md  CLAUDE.md  DevelopmentRunBook.md  GITHUB_WORKFLOW_GUIDE.md  Hydra.sln  PROJECT_PLAN.md  README.md  THIRD_PARTY_NOTICES.md  opencode.json  opencode.jsonc  prd.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.understand-anything/: .understandignore
TestResults/: e2e-full.xml  e2e-mocked.xml
docs/: GITHUB_PROJECT_SETUP.md  PLANE_SETUP.md  REVOLUSION_PLAN_01_JUN.MD  RUNBOOK.md  [Depricated]PLANE_SETUP.md  architecture-principles.md  architecture.md  build-environment.md  combined-mode-sched-registration.md  combined-reservation-design.md  cuda-modules.md  design-direct-push-logging.md  diagrams.md  distributed-engine-vision.md  dynamic-quant-swap-combined.md  eval-tests.md  handoff-csharp-coordinator.md  hydra-system-pod.md  hydra_llama_cpp_PLAN.md  kv-dag-architecture.md  llama-bench-guide.md  milestone-0-mvp.md  milestone-1-core.md  milestone-2-advanced.md  milestone-3-production.md  milestone-4-models.md  milestone-5-agentic.md  milestone-perf-scheduler-revised.md  milestone-perf.md  poc-results.md  prefill-worker-optimization.md  spike-engine-mode-switch.md  store-redesign.md
infra/: Dockerfile  Dockerfile.build  docker-compose.hydra.yml  docker-compose.infra.yml  docker-compose.yml  hydra-sidecar.service  install-sidecar.sh  models-preset.ini  setup-ramdisk.sh
monitoring/: MONITORING_GUIDE.md  report-2026-05-28T1206Z.md
reviews/: INDEX.md  groups.yml  m0-review.md  m1-review.md  m2-review.md
scripts/: build-request-detail.py  consolidate_review_issues.py  create_monitoring_issues.py  deploy-hydra-head.sh  deploy-hydra.sh  deploy-infra.sh  deploy-llama.sh  deploy.sh  gh_seed_project.py  hydra-token.sh  patch-quadlets.sh  plane_seed_roadmap.py  regenerate-quadlets.sh  setup-doppler-token.sh  setup-env.sh  setup-p100.sh  setup_github_labels.sh  start-env.sh  start-hydra-system-pod.sh  start-hydra.sh  start-infra.sh  sync_reviews_to_github.py
specs/: agent-service.md  coordinator-api.yaml  models.md  rpc-protocol.md  store-service.md
src/: Directory.Build.props  Hydra.runsettings  Hydra.sln  REVOLUSION_PLAN_01_JUN.MD
src/head/: go.mod  (+2 more)
tests/: e1_rpc_test.py
(+421 files in other folders)
