[project]
name = "hydra"
dynamic = ["version"]
description = "High-throughput multi-GPU LLM inference system with KV state management"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
persistence = ["aiosqlite>=0.20"]
monitoring = ["prometheus-client>=0.21"]
langfuse = ["langfuse>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]
all = ["hydra[persistence,monitoring,langfuse,dev]"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.scripts]
hydra-coordinator = "coordinator.main:run"

[tool.setuptools.package-dir]
"" = "src"
"coordinator" = "src/coordinator"
"python_shared" = "src/python_shared"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/coordinator/tests", "tests"]
markers = [
    "e2e: marks E2E tests that require real services (llama-servers, Store, Agents)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
